# jnlive

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  jnlive.code-workspace  komplete.md  provision.sh  readme.md
app/: CMakeLists.txt  komplete.md  readme.md
app/source/: engine.cpp  engine.h  gui.cpp  jackutils.cpp  jackutils.h  komplete.cpp  komplete.h  kompletegui.cpp  kompletegui.h  lilvutils.cpp  lilvutils.h  main.cpp  midi.cpp  midi.h  project.cpp  project.h  realtimethread.cpp  schedule.cpp  simplegui.cpp  simplegui.h  utils.cpp  utils.h
nix/: flake.nix
source/: conspiracy.cpp  conspiracy.h  engine.cpp  engine.h  gui.cpp  gui.h  jackutils.cpp  jackutils.h  komplete.cpp  komplete.h  kompletegui.cpp  kompletegui.h  lilvjacklink.cpp  lilvjacklink.h  lilvutils.cpp  lilvutils.h  log.cpp  log.h  main.cpp  midi.cpp  midi.cppm  midi.h  plugins.cpp  plugins.h  project.cpp  project.cppm  project.h  realtimethread.cpp  realtimethread.h  ringbuf.cpp  ringbuf.h  schedule.cpp  schedule.h  simplegui.cpp  simplegui.h  utils.cpp  utils.h
source/old/: lilvjacklink.cpp
test1/: test1.py  test2.py
